--- a/Menu_Fav.ini
+++ b/Menu_Fav.ini
@@ -1,4 +1,4 @@
-[Menu]
+[Menu_Items]
 Cloud               =D:\Cloud
 ----------------PATH=
 Disk D              =D:\
@@ -28,11 +28,14 @@ EditIcon            =
 ConfigIcon          =D:\Cloud\CODE\SOURCE\other\menu.ico
 
 [project]
+ICON                =D:\ICON
+ICON - 副本                =D:\ICON - 副本
 Candy               =D:\Cloud\CODE\AUTOHOTKEY\Candy
 
 
 [rel_emoji]
 emoji_path          =D:\Cloud\PICTURE\Fav\符号标签
+;Desktop             =C:\users\jianghui\desktop
 
 [快捷短语]
 点击此处菜单，将输入菜单内容到当前的窗口
