--- a/Menu_Fav.ini
+++ b/Menu_Fav.ini
@@ -1,16 +1,24 @@
+
+[project]
+AutoGUI             =D:\Cloud\CODE\AUTOHOTKEY\AutoGUI
+BLOG                =D:\Cloud\CODE\BLOG
+Candy               =D:\Cloud\CODE\AUTOHOTKEY\Candy
+Menu_Fav            =D:\Cloud\CODE\AUTOHOTKEY\Menu_Fav
+Scriptlet Library   =D:\Cloud\CODE\AUTOHOTKEY\Scriptlet Library
+ShowColor           =D:\Cloud\CODE\AUTOHOTKEY\ShowColor
+Snippets            =D:\Cloud\CODE\AUTOHOTKEY\Snippets
+
 [Menu_Items]
 Cloud               =D:\Cloud
 ----------------PATH=
+Disk C              =C:\
 Disk D              =D:\
 Picture             =D:\Cloud\PICTURE
 Software            =D:\Cloud\Software
 Fav                 =D:\Cloud\PICTURE\Fav
 Desktop             =C:\users\jianghui\desktop
------------------AHK=
-Scripts             =D:\Cloud\CODE\AUTOHOTKEY
-Snippets            =D:\Cloud\CODE\AUTOHOTKEY\Snippets
 -------------Scripts=
-ClipBoardMonitor    =D:\Cloud\CODE\AUTOHOTKEY\ClipBoardMonitor.AHK
+ClipBoardMonitor    =D:\Cloud\CODE\AUTOHOTKEY\ClipBoardMonitor\ClipBoardMonitor.AHK
 getwininfo          =D:\Cloud\CODE\AUTOHOTKEY\getwininfo.AHK
 getwininfo          =D:\Cloud\CODE\AUTOHOTKEY\getwininfo.AHK
 IF                  =D:\Cloud\CODE\AUTOHOTKEY\IF.AHK
@@ -18,29 +26,18 @@ keys                =D:\Cloud\CODE\AUTOHOTKEY\keys.ahk
 WinAutoHide         =D:\Cloud\CODE\AUTOHOTKEY\WinAutoHide.ahk
 WinMove             =D:\Cloud\CODE\AUTOHOTKEY\WinMove.AHK
 WinSwitch           =D:\Cloud\CODE\AUTOHOTKEY\WinSwitch.ahk
+;---------------Tools=
 
 [Action]
 
-[Settings]
------------------AHK=
-ShowIcon            =1
-EditIcon            =
-ConfigIcon          =D:\Cloud\CODE\SOURCE\other\menu.ico
-
-[project]
-ICON                =D:\ICON
-ICON - 副本                =D:\ICON - 副本
-Candy               =D:\Cloud\CODE\AUTOHOTKEY\Candy
-
-
-[rel_emoji]
-emoji_path          =D:\Cloud\PICTURE\Fav\符号标签
-;Desktop             =C:\users\jianghui\desktop
-
-[快捷短语]
+[QuickPhrases]
 点击此处菜单，将输入菜单内容到当前的窗口
 Hello
 world!
 Hello world!
 I love you!
 
+[Settings]
+ShowIcon            =1
+EditIcon            =
+ConfigIcon          =D:\Cloud\CODE\SOURCE\other\menu.ico
