--- a/Menu_Fav.ini
+++ b/Menu_Fav.ini
@@ -1,14 +1,11 @@
-
 [project]
 AutoGUI             =D:\Cloud\CODE\AUTOHOTKEY\AutoGUI
 BLOG                =D:\Cloud\CODE\BLOG
 Candy               =D:\Cloud\CODE\AUTOHOTKEY\Candy
-Menu_Fav            =D:\Cloud\CODE\AUTOHOTKEY\Menu_Fav
-Scriptlet Library   =D:\Cloud\CODE\AUTOHOTKEY\Scriptlet Library
 ShowColor           =D:\Cloud\CODE\AUTOHOTKEY\ShowColor
 Snippets            =D:\Cloud\CODE\AUTOHOTKEY\Snippets
 
-[Menu_Items]
+[menu]
 Cloud               =D:\Cloud
 ----------------PATH=
 Disk C              =C:\
@@ -26,18 +23,21 @@ keys                =D:\Cloud\CODE\AUTOHOTKEY\keys.ahk
 WinAutoHide         =D:\Cloud\CODE\AUTOHOTKEY\WinAutoHide.ahk
 WinMove             =D:\Cloud\CODE\AUTOHOTKEY\WinMove.AHK
 WinSwitch           =D:\Cloud\CODE\AUTOHOTKEY\WinSwitch.ahk
-;---------------Tools=
 
-[Action]
-
-[QuickPhrases]
-点击此处菜单，将输入菜单内容到当前的窗口
+[shortcut]
+点击此处菜单，将输入菜单内容到当前窗口
 Hello
 world!
 Hello world!
-I love you!
 
-[Settings]
-ShowIcon            =1
-EditIcon            =
-ConfigIcon          =D:\Cloud\CODE\SOURCE\other\menu.ico
+[ICON]
+Menu_fav            =
+shortcut            =D:\Cloud\CODE\SOURCE\Emoji\ghost.ico
+edit                =
+exit                =D:\Cloud\CODE\SOURCE\Emoji\MI20190117141955.ico
+Config              =
+Cloud               =D:\Cloud\CODE\SOURCE\知名公司、产品logo\weiyun\logo.ico
+
+[setting]
+hotkey              =
+showMenuerror       =1
