--- a/Menu_Fav.ini
+++ b/Menu_Fav.ini
@@ -1,28 +1,21 @@
 [project]
-AutoGUI             =D:\Cloud\CODE\AUTOHOTKEY\AutoGUI
 BLOG                =D:\Cloud\CODE\BLOG
 Candy               =D:\Cloud\CODE\AUTOHOTKEY\Candy
-ShowColor           =D:\Cloud\CODE\AUTOHOTKEY\ShowColor
 Snippets            =D:\Cloud\CODE\AUTOHOTKEY\Snippets
 
 [menu]
-Cloud               =D:\Cloud
 ----------------PATH=
 Disk C              =C:\
 Disk D              =D:\
 Picture             =D:\Cloud\PICTURE
 Software            =D:\Cloud\Software
+CODE                =D:\Cloud\CODE\
 Fav                 =D:\Cloud\PICTURE\Fav
 Desktop             =C:\users\jianghui\desktop
 -------------Scripts=
-ClipBoardMonitor    =D:\Cloud\CODE\AUTOHOTKEY\ClipBoardMonitor\ClipBoardMonitor.AHK
-getwininfo          =D:\Cloud\CODE\AUTOHOTKEY\getwininfo.AHK
-getwininfo          =D:\Cloud\CODE\AUTOHOTKEY\getwininfo.AHK
-IF                  =D:\Cloud\CODE\AUTOHOTKEY\IF.AHK
-keys                =D:\Cloud\CODE\AUTOHOTKEY\keys.ahk
-WinAutoHide         =D:\Cloud\CODE\AUTOHOTKEY\WinAutoHide.ahk
-WinMove             =D:\Cloud\CODE\AUTOHOTKEY\WinMove.AHK
-WinSwitch           =D:\Cloud\CODE\AUTOHOTKEY\WinSwitch.ahk
+_GetWinInfo         =D:\Cloud\CODE\AUTOHOTKEY\GetWinInfo\GetWinInfo.ahk
+_Expressive         =D:\Cloud\CODE\AUTOHOTKEY\AutoGUI\Tools\Expressive.ahk
+_Scripts Manager    =D:\Cloud\CODE\AUTOHOTKEY\AutoGUI\Tools\Scripts Manager.ahk
 
 [shortcut]
 点击此处菜单，将输入菜单内容到当前窗口
@@ -32,11 +25,11 @@ Hello world!
 
 [ICON]
 Menu_fav            =
-shortcut            =D:\Cloud\CODE\SOURCE\Emoji\ghost.ico
+shortcut            =D:\Cloud\CODE\RESOURCE\Emoji\ghost.ico
 edit                =
-exit                =D:\Cloud\CODE\SOURCE\Emoji\MI20190117141955.ico
+exit                =D:\Cloud\CODE\RESOURCE\Emoji\MI20190117141955.ico
 Config              =
-Cloud               =D:\Cloud\CODE\SOURCE\知名公司、产品logo\weiyun\logo.ico
+Cloud               =D:\Cloud\CODE\RESOURCE\知名公司、产品logo\weiyun\logo.ico
 
 [setting]
 hotkey              =
