--- a/Menu_Fav.ini
+++ b/Menu_Fav.ini
@@ -1,36 +1,29 @@
 [project]
-BLOG                =D:\Cloud\CODE\BLOG
 Candy               =D:\Cloud\CODE\AUTOHOTKEY\Candy
-Snippets            =D:\Cloud\CODE\AUTOHOTKEY\Snippets
-
+Fav                 =D:\Cloud\PICTURE\Fav
 [menu]
 ----------------PATH=
-Disk C              =C:\
-Disk D              =D:\
-Picture             =D:\Cloud\PICTURE
-Software            =D:\Cloud\Software
 CODE                =D:\Cloud\CODE\
-Fav                 =D:\Cloud\PICTURE\Fav
-Desktop             =C:\users\jianghui\desktop
+Desktop             =C:\Users\JiangHui\DeskTop
 -------------Scripts=
 _GetWinInfo         =D:\Cloud\CODE\AUTOHOTKEY\GetWinInfo\GetWinInfo.ahk
-_Expressive         =D:\Cloud\CODE\AUTOHOTKEY\AutoGUI\Tools\Expressive.ahk
-_Scripts Manager    =D:\Cloud\CODE\AUTOHOTKEY\AutoGUI\Tools\Scripts Manager.ahk
+------------programs=
+Everything          =D:\Cloud\SoftWare\Everything\Everything.exe
 
 [shortcut]
-点击此处菜单，将输入菜单内容到当前窗口
-Hello
-world!
-Hello world!
+I'm using menu_fav.ahk to send this line.
+this is the second line.
+each line would shown as a menu.
+can be one
+word
+or very long sentence. All uses depend on your config and imagination.
+that's all.
 
 [ICON]
-Menu_fav            =
 shortcut            =D:\Cloud\CODE\RESOURCE\Emoji\ghost.ico
-edit                =
-exit                =D:\Cloud\CODE\RESOURCE\Emoji\MI20190117141955.ico
-Config              =
-Cloud               =D:\Cloud\CODE\RESOURCE\知名公司、产品logo\weiyun\logo.ico
+exit                =D:\Cloud\CODE\RESOURCE\Emoji\exit.ico
 
 [setting]
 hotkey              =
 showMenuerror       =1
+Activatewindows     =C:\Windows\explorer.exe,C:\Windows\SysWOW64\hh.exe,C:\Windows\System32\notepad.exe
