modify and optimize some functions

--- a/Menu_Fav.ini
+++ b/Menu_Fav.ini
@@ -1,29 +1,21 @@
 [project]
-Candy               =D:\Cloud\CODE\AUTOHOTKEY\Candy
-Fav                 =D:\Cloud\PICTURE\Fav
+Candy               = D:\AUTOHOTKEY\Candy
+Menu_Fav            = D:\Menu_Fav
+
 [menu]
-----------------PATH=
-CODE                =D:\Cloud\CODE\
-Desktop             =C:\Users\JiangHui\DeskTop
--------------Scripts=
-_GetWinInfo         =D:\Cloud\CODE\AUTOHOTKEY\GetWinInfo\GetWinInfo.ahk
-------------programs=
-Everything          =D:\Cloud\SoftWare\Everything\Everything.exe
+-------PATH---------=
+D:\                 = D:\
+ICON                = D:\AUTOHOTKEY\ICON
+=
+Scripts=
+AutoHotkey          = C:\Program Files\AutoHotkey
 
-[shortcut]
-I'm using menu_fav.ahk to send this line.
-this is the second line.
-each line would shown as a menu.
-can be one
-word
-or very long sentence. All uses depend on your config and imagination.
-that's all.
-
-[ICON]
-shortcut            =D:\Cloud\CODE\RESOURCE\Emoji\ghost.ico
-exit                =D:\Cloud\CODE\RESOURCE\Emoji\exit.ico
+=
+Programs=
+Chrome              = C:\Program Files (x86)\Google\Chrome\Application\chrome.exe
+Firefox             = C:\Program Files\Mozilla Firefox\firefox.exe
+Everything          = S:\SoftWare\Everything\Everything.exe
 
 [setting]
-hotkey              =
-showMenuerror       =1
+hotkey              =F1
 Activatewindows     =C:\Windows\explorer.exe,C:\Windows\SysWOW64\hh.exe,C:\Windows\System32\notepad.exe
